k8s/charts/networking/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-test
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`grafana.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: grafana-service
          port: 3000
    - match: Host(`influxdb.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: influxdb-service
          port: 8086
    - match: Host(`frontend.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: frontend-service
          port: 80
    - match: Host(`backend.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: applications-service
          port: 9055
    - match: Host(`linkwarden.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: linkwarden
          port: 3000
    - match: Host(`wiki.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: wikijs-service
          port: 3000
    - match: Host(`anki.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: anki-service
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.home-lab.com`)
      kind: Rule
      services:
        - kind: Service
          name: argocd-server
          port: 80
